# project-elissa

./: .gitignore  README.md  compose.yaml  main.ipynb  main.py  playground.ipynb  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: bandit.yml
api/: demo.py  main.py
dashboard/: hello.py  main.py
dashboard/pages/: engine.py
data/: LDA_result.pkl  dashboard.csv  keywords_set.json  products.csv  products_categorized.csv  scores.csv  scores_neg.csv  scores_pos.csv
deepnote/: main.ipynb
mongodb/: client.py  interfaces.py  items.py  main.py
nlp/: main.ipynb  methodology-remade.ipynb  methodology.ipynb
scraping/: __init__.py  base.py  common.py  interfaces.py  pipelines.py
scraping/product_page/: functions.py  spider.py
scraping/review_page/: functions.py  spider.py
scraping/search_page/: functions.py  spider.py
scraping/spiders/: product_page.py  review_page.py  search_page.py
scraping/tests/: test_selenium.py
scraping/utils/: __init__.py  base.py  common.py  constants.py  items.py  spiders.py
scripts/: converter.py
selenium/: main.py
selenium/utils/: constants.py
tests/: conftest.py  test_antirobot.py  test_dashboard.py  test_mongodb.py  test_product_page.py  test_review_page.py  test_search_page.py  test_selenium.py
tests/mongodb/: test_mongodb.py
tests/scraping/: test_antirobot.py  test_product_page.py  test_review_page.py  test_search_page.py
visualisation/: EDA.ipynb  analysis.ipynb
