[tool.poetry]
name = "project-elissa"
version = "0.1.0"
description = "The project to build a recommender for feminin hygiene products scrapped from Amazon.fr"
authors = ["yunan.wang"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.6"
selenium = "^4.16.0"
pytest = "^7.4.3"
pymongo = "^4.6.1"
ipykernel = "^6.27.1"
pandas = "^2.1.4"
python-dotenv = "^1.0.0"
matplotlib = "^3.8.2"
fastapi = "^0.108.0"
streamlit = "^1.30.0"
plotly = "^5.18.0"
pydantic = "^2.5.3"
undetected-chromedriver = "^3.5.4"
setuptools = "^69.0.3"
wheel = "^0.42.0"
amazoncaptcha = "^0.5.11"


[tool.poetry.group.dev.dependencies]
watchdog = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
