[tool.poetry]
name = "project-elissa"
version = "0.1.0"
description = "The project to build a recommender for feminin hygiene products scrapped from Amazon.fr"
authors = ["yunan.wang"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
selenium = "^4.16.0"
pytest = "^7.4.3"
pymongo = "^4.6.1"
ipykernel = "^6.27.1"
pandas = "^2.1.4"
python-dotenv = "^1.0.0"
matplotlib = "^3.8.2"
streamlit = "^1.29.0"
plotly = "^5.18.0"
pydantic = "^2.5.3"
undetected-chromedriver = "^3.5.4"
setuptools = "^69.0.3"
wheel = "^0.42.0"
amazoncaptcha = "^0.5.11"
nltk = "^3.8.1"
scikit-learn = "^1.3.2"
gensim = "^4.3.2"
pyldavis = "^3.4.1"
google-cloud-translate = "^3.14.0"
ipywidgets = "^8.1.1"
textblob = "^0.17.1"
fastapi = "^0.109.1"
seaborn = "^0.13.1"
wordcloud = "^1.9.3"


[tool.poetry.group.dev.dependencies]
watchdog = "^3.0.0"
uvicorn = "^0.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
